yiltc/testsuite/negative/enum_unknown_type.yilt
// Negative test: unknown enum type used in variant literal

pub fn main()
    let c = UnknownType.Red
    print(c)
